--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -1,6 +1,11 @@
 // Typography
 $font-family: 'Titillium Web'; // Google Font
 $global-font-size: 17px;
+$text-font-size-1: 22px;
+$text-font-size-2: 24px;
+$title-font-size-1: 36px;
+$title-font-size-2: 56px;
+$title-font-size-3: 64px;
 
 // Animations Timing
 $transition-links: 300ms;
