--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -6,16 +6,17 @@
  *
  **/
 
+ $header-height: 122px;
+
 .no-scroll header.site-header .site-navigation-bar {
   overflow: visible;
 }
 
 
 header.site-header {
-  position: relative;
+  position: fixed;
   width: 100%;
-  height: 100vh;
-  max-height: 1080px;
+  background-color: $web-blue;
   z-index: 1;
 
   // Overlay Lightbox
@@ -67,11 +68,10 @@ header.site-header {
     left: 0;
   }
 
-  .container {
+  &>.container {
     pointer-events: none;
-    position: relative;
-    height: 100vh;
     max-height: 1080px;
+    height: $header-height;
 
     .heading-content {
       .heading-title h2 {
@@ -90,18 +90,13 @@ header.site-header {
   .site-navigation-bar {
     justify-content: space-between;
     pointer-events: all;
-    position: relative;
-    overflow: hidden;
-    height: 80px;
-    min-height: 80px;
+    height: $header-height;
     z-index: 2;
-    text-transform: uppercase;    
     font-weight: bold;
-    -webkit-transform: translate3d(0, 0, 0);
 
     // Logo
     .logo img {
-      width: 120px;
+      width: 150px;
       max-width: initial;
     }
 
@@ -109,9 +104,9 @@ header.site-header {
     .navigation-bar {
 
       nav.nav-menu {
-        position: relative;
         display: flex;
         justify-content: flex-end;
+        padding-left: 25px;
 
         i.fi {
           font-size: 1.8em;
@@ -120,9 +115,66 @@ header.site-header {
         ul {
           flex-direction: row;
           align-items: center;
-          li {
-            margin-right: 30px;
+          width: 100%;
+          justify-content: space-between;
 
+          li {
+
+            &.subnav {
+              &>a {
+                overflow: hidden;
+                height: $header-height;
+                display: flex;
+                align-items: center;
+              }
+
+              &:hover>.subnav-content {
+                display: block;
+              }
+            }
+
+            &>.subnav-content {
+              display: none;
+              position: fixed;
+              left: 0;
+              top: $header-height;
+              background-color: $white;
+              width: 100%;
+              z-index: 1;
+              padding-top: 50px;
+              padding-bottom: 50px;
+
+              .container {
+                margin-left: auto;
+                margin-right: auto;
+                justify-content: end;
+
+                a {
+                  color: $web-blue;
+                  cursor: pointer;
+                  padding-top: 15px;
+                  padding-bottom: 10px;
+                  margin-bottom: 10px;
+                  position: relative;
+                  width: fit-content;
+                  &:hover::before {
+                    content: '';
+                    position: absolute;
+                    height: 2px;
+                    background-color: $diode-orange;
+                    bottom: 0;
+                    width: 100%;
+                  }
+                  &.current-menu-item {
+                    color: $orange;
+                  }
+                }
+
+              }
+
+
+            }
+            
             &:last-child {
               margin-right: 0;
             }
@@ -131,18 +183,6 @@ header.site-header {
               a {
                 color: $primary;
                 position: relative;
-
-                &:before {
-                  content: '';
-                  display: block;
-                  position: absolute;
-                  width: 50%;
-                  height: 1px;
-                  left: 50%;
-                  bottom: -10px;
-                  transform: translateX(-50%);
-                  background-color: $primary;
-                }
               }
             }
 
@@ -150,6 +190,8 @@ header.site-header {
               display: block;
               color: $white;
               padding: 10px 0;
+              font-size: $text-font-size-2;
+              text-transform: initial;
 
               &:hover,
               &:active {
