--- a/css/style.css
+++ b/css/style.css
@@ -2186,6 +2186,43 @@ Creation date: 06/02/2020 15:13
   content: "\f107";
 }
 
+/*!
+ * Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com
+ * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
+ */
+@font-face {
+  font-family: 'Font Awesome 5 Brands';
+  font-style: normal;
+  font-weight: 400;
+  font-display: block;
+  src: url("../fonts/Fontawesome/fa-brands-400.eot");
+  src: url("../fonts/Fontawesome/fa-brands-400.eot?#iefix") format("embedded-opentype"), url("../fonts/Fontawesome/fa-brands-400.woff2") format("woff2"), url("../fonts/Fontawesome/fa-brands-400.woff") format("woff"), url("../fonts/Fontawesome/fa-brands-400.ttf") format("truetype"), url("../fonts/Fontawesome/fa-brands-400.svg#fontawesome") format("svg");
+}
+
+.fab {
+  font-family: 'Font Awesome 5 Brands';
+  font-weight: 400;
+}
+
+.fa-telegram-plane:before {
+  content: "\f3fe";
+}
+
+.fab:before {
+  display: inline-block;
+  font-family: "Font Awesome 5 Brands";
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  line-height: 1;
+  text-decoration: inherit;
+  text-rendering: optimizeLegibility;
+  text-transform: none;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
+}
+
 /**
  *
  *  Forms & Inputs Style
@@ -2367,27 +2404,29 @@ ul.tag-cloud-box li a:hover {
  *
  **/
 .button, button {
+  background-color: #f15d2f;
+  color: #fff;
   display: inline-block;
   width: auto;
   max-width: 100%;
-  color: #F15C2E;
-  border: 2px solid #F15C2E;
   padding: 0.8em 2em;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
   text-align: center;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
 }
 
 .button.button-focus, button.button-focus {
-  color: #fff;
-  background-color: #F15C2E;
+  background-color: #ed4423;
 }
 
 .button:hover, .button:active, button:hover, button:active {
+  background-color: #ed4423;
   color: #fff;
-  border-color: #f7a78e;
-  background-color: #f7a78e;
+  -webkit-filter: drop-shadow(0px 0px 25px #f15d2f);
+          filter: drop-shadow(0px 0px 25px #f15d2f);
 }
 
 .button-cta {
@@ -2765,7 +2804,7 @@ header.site-header .parallax-wrapper {
 header.site-header > .container {
   pointer-events: none;
   max-height: 1080px;
-  height: 122px;
+  height: 6.5rem;
 }
 
 header.site-header > .container .heading-content {
@@ -2788,7 +2827,7 @@ header.site-header .site-navigation-bar {
       -ms-flex-pack: justify;
           justify-content: space-between;
   pointer-events: all;
-  height: 122px;
+  height: 6.5rem;
   z-index: 2;
   font-weight: bold;
 }
@@ -2831,9 +2870,9 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul {
           justify-content: space-between;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subnav > a {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.subnav > a.nav-link {
   overflow: hidden;
-  height: 122px;
+  height: 6.5rem;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2852,7 +2891,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .su
   display: none;
   position: fixed;
   left: 0;
-  top: 122px;
+  top: 6.5rem;
   background-color: #fff;
   width: 100%;
   z-index: 1;
@@ -2879,6 +2918,7 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .su
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
+  font-size: 1.2rem;
 }
 
 header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li > .subnav-content .container a:hover::before {
@@ -2903,16 +2943,20 @@ header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li.curre
   position: relative;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link {
   display: block;
   color: #fff;
   padding: 10px 0;
-  font-size: 24px;
+  font-size: 1.2rem;
   text-transform: initial;
 }
 
-header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a:hover, header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a:active {
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link:hover, header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link:active {
   color: #F15C2E;
+}
+
+header.site-header .site-navigation-bar .navigation-bar nav.nav-menu ul li a.nav-link i {
+  font-size: 1.5rem;
 }
 
 header.site-header .frag {
