--- a/_scss/components/_buttons.scss
+++ b/_scss/components/_buttons.scss
@@ -8,27 +8,27 @@
 
 // Buttons
 .button, button {
+  background-color: $orange;
+  color: $white;
   display: inline-block;
   width: auto;
   max-width: 100%;
-  color: $primary;
-  border: 2px solid $primary;
   padding: 0.8em 2em;
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
   text-align: center;
+  border-radius: 5px;
 
   &.button-focus {
-    color: $white;
-    background-color: $primary;
+    background-color: $dark-orange;
   }
 
   &:hover,
   &:active {
+    background-color: $dark-orange;
     color: $white;
-    border-color: lighten($primary, 20%);
-    background-color: lighten($primary, 20%);
+    filter: drop-shadow(0px 0px 25px $orange);
   }
 
 }
