feat: mobile nav 1

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
       <!-- Toggle Mobile Menu -->
       <div class="col-xs-8 toggle-menu">
         <!-- Burger -->
-        <div class="navTrigger"><i></i><i></i><i></i></div>
+        <div class="navTrigger"><i></i><i></i></div>
       </div>
 
       <!-- Navigation Bar -->
