--- a/_scss/modules/_config.scss
+++ b/_scss/modules/_config.scss
@@ -16,8 +16,10 @@ $transition-links-type: ease-in-out;
 $animation-arrow-header-type: ease-in-out;
 
 // Menu
-$header-height: 6.5rem;
+$desktop-header-height: 6.5rem;
 
 // Mobile Menu Settings
+$mobile-header-height: 5.5rem;
+
 $cubic: cubic-bezier(0.4, 0.01, 0.165, 0.99);
 $menuItems: 12;
