--- a/_scss/layout/_header-responsive.scss
+++ b/_scss/layout/_header-responsive.scss
@@ -39,157 +39,160 @@
       .parallax-wrapper {
         visibility: hidden;
       }
-    }  
-
-    // Site Navigation Bar
-    .site-navigation-bar {
-      height: 50px;
-      min-height: 50px;
-      background: $primary;
-      z-index: 99999999999998;
-
-      // Navigation Bar
-      .navigation-bar {
-        position: fixed;
-        top: 50px;
-        left: 0;
-        width: 100%;
-        height: calc(100vh - 50px);
-        font-weight: lighter;
-        overflow-y: scroll;
-        opacity: 1;
-        background: $dark-gray;
-        transform: translateY(100%);
-        transition: transform 0.8s $transition-links-type;
-        z-index: 99999999999999;
-
-        // Nav Menu
-        .nav-menu {
-          width: 100%;
-          padding: 30px 0;
-          font-size: 1.3rem;
-
-          ul.menu {
-            position: relative;
-            display: block;
-            padding: 0px 48px;
-            list-style: none;
-
-            li {
-              width: 100%;
-              border-bottom: 1px solid $normal-gray;
-              margin-bottom: 5px;
-              opacity: 0;
-              transform: scale(1.15) translateY(-30px);
-              transition: transform 0.5s $cubic, opacity 0.6s $cubic;
-
-              &:last-child {
-                border-bottom: 0;
-              }
-
-              @for $i from 1 through $menuItems {
-                &:nth-child(#{$i}) {
-                    transition-delay: #{0.56 - ($i * 0.07)}s;
-                }
-              }
-
-              // Remove current menu item indicator
-              &.current-menu-item {
-                a:before {
-                  content: '';
-                  display: none;
-                }
-              }
-
-              a {
-                display: block;
-                color: $white;
-                width: 100%;
-                padding: 15px 0 20px 0;
-
-              }
-              
-            }
-          }
-
-        }
-
-        // Active Mode
-        &.active {
-          opacity: 1;
-          transform: translateY(0);
-          transition-duration: $transition-links;
-
-          // Nav Menu Active
-          .nav-menu {
-            ul.menu {
-                li {
-                    transform: scale(1) translateY(0);
-                    opacity: 1;
-                    @for $i from 1 through $menuItems {
-                        &:nth-child(#{$i}) {
-                            transition-delay: #{0.07 * $i+0.2}s;
-                        }
-                    }
-                }
-            }
-          }
-        }
-
-      }
-
-      // Toggle Menu
-      .toggle-menu {
-        display: flex;
-        align-items: flex-end;
-        font-size: 3rem;
-        color: $white;
-
-        // Nav Toggle Trigger Button
-        .navTrigger {
-          cursor: pointer;
-          width: 40px;
-          height: 32px;
-          position: relative;
-
-          i {
-            background-color: #fff;
-            content: '';
-            display: block;
-            width: 100%;
-            height: 2px;
-          }
-          i:nth-child(1) {
-            animation: sera-outT 0.8s backwards;
-            animation-direction:reverse;
-          }
-          i:nth-child(2) {
-            margin: 12px 0;
-            animation: sera-outM 0.8s backwards;
-            animation-direction:reverse;
-          }
-          i:nth-child(3) {
-            animation: sera-outBtm 0.8s backwards;
-            animation-direction:reverse;
-          }
-
-          &.active {
-            i:nth-child(1) {
-              animation: sera-inT 0.8s forwards;
-            }
-            i:nth-child(2) {
-              animation: sera-inM 0.8s forwards;
-            }
-            i:nth-child(3) {
-              animation: sera-inBtm 0.8s forwards;
-            }
-          }
-        }
-
-      }
-
     }
 
+    &>.container {
+      height: $mobile-header-height;
+
+      // Site Navigation Bar
+      .site-navigation-bar {
+        height: $mobile-header-height;
+        z-index: 99999999999998;
+
+        // Logo
+        .logo img {
+          width: 100px;
+        }
+
+        // Navigation Bar
+        .navigation-bar {
+          position: fixed;
+          top: 50px;
+          left: 0;
+          width: 100%;
+          height: calc(100vh - 50px);
+          font-weight: lighter;
+          overflow-y: scroll;
+          opacity: 1;
+          background: $dark-gray;
+          transform: translateY(100%);
+          transition: transform 0.8s $transition-links-type;
+          z-index: 99999999999999;
+
+          // Nav Menu
+          .nav-menu {
+            width: 100%;
+            padding: 30px 0;
+            font-size: 1.3rem;
+
+            ul.menu {
+              position: relative;
+              display: block;
+              padding: 0px 48px;
+              list-style: none;
+
+              li {
+                width: 100%;
+                border-bottom: 1px solid $normal-gray;
+                margin-bottom: 5px;
+                opacity: 0;
+                transform: scale(1.15) translateY(-30px);
+                transition: transform 0.5s $cubic, opacity 0.6s $cubic;
+
+                &:last-child {
+                  border-bottom: 0;
+                }
+
+                @for $i from 1 through $menuItems {
+                  &:nth-child(#{$i}) {
+                      transition-delay: #{0.56 - ($i * 0.07)}s;
+                  }
+                }
+
+                // Remove current menu item indicator
+                &.current-menu-item {
+                  a:before {
+                    content: '';
+                    display: none;
+                  }
+                }
+
+                a {
+                  display: block;
+                  color: $white;
+                  width: 100%;
+                  padding: 15px 0 20px 0;
+
+                }
+                
+              }
+            }
+
+          }
+
+          // Active Mode
+          &.active {
+            opacity: 1;
+            transform: translateY(0);
+            transition-duration: $transition-links;
+
+            // Nav Menu Active
+            .nav-menu {
+              ul.menu {
+                  li {
+                      transform: scale(1) translateY(0);
+                      opacity: 1;
+                      @for $i from 1 through $menuItems {
+                          &:nth-child(#{$i}) {
+                              transition-delay: #{0.07 * $i+0.2}s;
+                          }
+                      }
+                  }
+              }
+            }
+          }
+
+        }
+
+        // Toggle Menu
+        .toggle-menu {
+          display: flex;
+          align-items: flex-end;
+          font-size: 3rem;
+          color: $white;
+
+          // Nav Toggle Trigger Button
+          .navTrigger {
+            cursor: pointer;
+            width: 36px;
+            height: 32px;
+            position: relative;
+
+            i {
+              background-color: #fff;
+              content: '';
+              display: block;
+              width: 100%;
+              height: 3px;
+              border-radius: 1px;
+            }
+            i:nth-child(1) {
+              animation: sera-outT 0.8s backwards;
+              animation-direction:reverse;
+              margin-top: 9px;
+              width: 36px;
+            }
+            i:nth-child(2) {
+              margin: 11px 0 0 18px;
+              animation: sera-outM 0.8s backwards;
+              animation-direction:reverse;
+              width: 18px;
+            }
+
+            // &.active {
+            //   i:nth-child(1) {
+            //     animation: sera-inT 0.8s forwards;
+            //   }
+            //   i:nth-child(2) {
+            //     animation: sera-inM 0.8s forwards;
+            //   }
+            // }
+          }
+
+        }
+
+      }
+    }
   }
 
 }
