--- a/_scss/layout/_header.scss
+++ b/_scss/layout/_header.scss
@@ -69,7 +69,7 @@ header.site-header {
   &>.container {
     pointer-events: none;
     max-height: 1080px;
-    height: $header-height;
+    height: $desktop-header-height;
 
     .heading-content {
       .heading-title h2 {
@@ -88,7 +88,7 @@ header.site-header {
   .site-navigation-bar {
     justify-content: space-between;
     pointer-events: all;
-    height: $header-height;
+    height: $desktop-header-height;
     z-index: 2;
     font-weight: bold;
 
@@ -122,7 +122,7 @@ header.site-header {
             &.subnav {
               &>a.nav-link {
                 overflow: hidden;
-                height: $header-height;
+                height: $desktop-header-height;
                 display: flex;
                 align-items: center;
               }
@@ -136,7 +136,7 @@ header.site-header {
               display: none;
               position: fixed;
               left: 0;
-              top: $header-height;
+              top: $desktop-header-height;
               background-color: $white;
               width: 100%;
               z-index: 1;
