--- a/_scss/layout/_header-responsive.scss
+++ b/_scss/layout/_header-responsive.scss
@@ -43,6 +43,10 @@
 
     &>.container {
       height: $mobile-header-height;
+      
+      &::before {
+        opacity: 0;
+      }
 
       // Site Navigation Bar
       .site-navigation-bar {
@@ -57,14 +61,14 @@
         // Navigation Bar
         .navigation-bar {
           position: fixed;
-          top: 50px;
+          top: $mobile-header-height;
           left: 0;
           width: 100%;
           height: calc(100vh - 50px);
           font-weight: lighter;
           overflow-y: scroll;
           opacity: 1;
-          background: $dark-gray;
+          background: $web-blue;
           transform: translateY(100%);
           transition: transform 0.8s $transition-links-type;
           z-index: 99999999999999;
@@ -83,14 +87,41 @@
 
               li {
                 width: 100%;
-                border-bottom: 1px solid $normal-gray;
                 margin-bottom: 5px;
                 opacity: 0;
                 transform: scale(1.15) translateY(-30px);
                 transition: transform 0.5s $cubic, opacity 0.6s $cubic;
+                position: relative;
 
-                &:last-child {
-                  border-bottom: 0;
+                &::before {
+                  content: '';
+                  position: absolute;
+                  width: 36px;
+                  height: 1px;
+                  background-color: $orange;
+                  left: calc(50% - 18px);
+                }
+                &:first-child::before {
+                  content: none;
+                }
+
+                &>a {
+                  height: $mobile-header-height !important;
+                  display: flex !important;
+                  justify-content: center;
+                  align-items: center;
+                }
+
+                &.has-target-nav {
+                  display: none;
+                }
+
+                &.has-button-nav {
+                  display: none;
+                }
+
+                &>.subnav-content {
+                  display: none !important;
                 }
 
                 @for $i from 1 through $menuItems {
